RESOLVED FIXED116051
PlatformLayer containing scrollbars does not disappear when setting overflow:hidden on page root, until resize.
https://bugs.webkit.org/show_bug.cgi?id=116051
Summary PlatformLayer containing scrollbars does not disappear when setting overflow:...
Jer Noble
Reported 2013-05-13 11:32:39 PDT
Layer containing scrollbars does not disappear when setting overflow:hidden on page root, until resize.
Attachments
Patch (4.23 KB, patch)
2013-05-13 12:26 PDT, Jer Noble
no flags
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 (204.96 KB, application/zip)
2013-05-13 21:12 PDT, Build Bot
no flags
Patch (1.88 KB, patch)
2014-01-07 13:39 PST, Jer Noble
simon.fraser: review+
Jer Noble
Comment 1 2013-05-13 12:26:31 PDT
Build Bot
Comment 2 2013-05-13 21:12:57 PDT
Comment on attachment 201620 [details] Patch Attachment 201620 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/464500 New failing tests: compositing/contents-opaque/body-background-painted.html animations/3d/matrix-transform-type-animation.html animations/3d/state-at-end-event-transform.html compositing/backing/no-backing-for-clip-overlap.html accessibility/image-map2.html animations/additive-transform-animations.html compositing/contents-opaque/background-color.html compositing/bounds-in-flipped-writing-mode.html accessibility/lists.html compositing/layers-inside-overflow-scroll.html accessibility/deleting-iframe-destroys-axcache.html compositing/animation/state-at-end-event-transform-layer.html compositing/sibling-positioning.html compositing/generated-content.html compositing/self-painting-layers.html animations/3d/change-transform-in-end-event.html compositing/animation/busy-indicator.html compositing/tiled-layers-hidpi.html accessibility/plugin.html compositing/columns/composited-in-paginated.html compositing/color-matching/pdf-image-match.html compositing/contents-opaque/body-background-skipped.html compositing/contents-opaque/background-clip.html compositing/compositing-visible-descendant.html compositing/overflow-trumps-transform-style.html compositing/color-matching/image-color-matching.html compositing/backing/no-backing-for-clip.html compositing/backing/no-backing-for-clip-overhang.html compositing/backing/no-backing-for-perspective.html compositing/clip-child-by-non-stacking-ancestor.html
Build Bot
Comment 3 2013-05-13 21:12:58 PDT
Created attachment 201673 [details] Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
Radar WebKit Bug Importer
Comment 4 2013-06-27 13:12:55 PDT
Jer Noble
Comment 5 2013-06-28 08:57:38 PDT
The WK1 and WK2 results are different because of this section of ScrollView.cpp, ScrollView::setScrollbarModes(...): if (platformWidget()) platformSetScrollbarModes(); else updateScrollbars(scrollOffset()); WK1 takes the first branch, and WK2 the second. The second branch hits this new code, and (correctly) resizes the document to account for the vertical scrollbar which is forced on in FrameView.cpp, FrameView::layout(...): // Set the initial vMode to AlwaysOn if we're auto. if (vMode == ScrollbarAuto) setVerticalScrollbarMode(ScrollbarAlwaysOn); // This causes a vertical scrollbar to appear. // Set the initial hMode to AlwaysOff if we're auto. if (hMode == ScrollbarAuto) setHorizontalScrollbarMode(ScrollbarAlwaysOff); // This causes a horizontal scrollbar to disappear.
Jer Noble
Comment 6 2013-06-28 08:59:30 PDT
So it seems to me that this patch fixes an underlying bug in WebKitTestRunner: the size of the content area is not being updated when scrollbars are added or removed.
Jer Noble
Comment 7 2014-01-07 13:39:30 PST
Jer Noble
Comment 8 2014-01-07 13:41:05 PST
That area of code has changed quite a bit since the original patch was reviewed. The new fix is much smaller and more targeted.
Jer Noble
Comment 9 2014-01-07 14:27:54 PST
Note You need to log in before you can comment on or make changes to this bug.