PlatformLayer containing scrollbars does not disappear when setting overflow:hidden on page root, until resize. https://bugs.webkit.org/show_bug.cgi?id=116051

Reviewed by Simon Fraser.

Move the pre-existing call to addedOrRemovedScrollbar() outside of the else-statement
in updateScrollbars() so that changes made in the if-statement cause the scrollbar
layers to be updated. The scrollbarAddedOrRemoved local variable guarding access to
addedOrRemovedScrollbar() is already being set (but never checked) inside the if-statement.

* platform/ScrollView.cpp:
(WebCore::ScrollView::updateScrollbars):

Canonical link: https://commits.webkit.org/144496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161457 268f45cc-cd09-0410-ab3c-d52691b4dbfc